--- a/index.html
+++ b/index.html
@@ -5,11 +5,74 @@
 <meta name="description" content="Tatiana Cohen - Resume">
 <meta charset="utf-8">
 <title>Tatiana Cohen - Resume</title>
+<link href="css/normalize.min.css" rel="stylesheet" type="text/css">
 <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
+<header>
+	<h1>Tatiana Cohen</h1>
+	<p><a href="mailto:taty@tatianacohen.com">taty@tatianacohen.com</a></p>
+	<p>754.204.0527</p>
+</header>
+<main>
+	<section>
+		<h1>Summary</h1>
+		<p>Multimedia specialist with experience in photography, video production, web design/development and print design. Bilingual (English/Spanish), multi-functional, dependable, self-starter. Specialties include:</p>
+		<ul>
+			<li>Photography and Video</li>
+			<li>HTML5, CSS, Javascript, jQuery</li>
+			<li>Wordpress</li>
+			<li>Graphic Design</li>
+			<li>Adobe Creative Suite</li>
+			<li>SEO</li>
+		</ul>
+	</section>
+	<section>
+		<h1>Professional Experience</h1>
+		<article>
+			<h2>Nu Interactivo</h2>
+			<h3>Multimedia Specialist</h3>
+			<p class="location">Miami, FL</p>
+			<p class="date">2009 - Present</p>
+			<ul>
+				<li>Assist individuals and organizations with multimedia and marketing solutions including photography and video for promotional purposes, brand development, web design, online presence and SEO.</li>
+				<li>Provide translation services – English/Spanish</li>		
+			</ul>
+		</article>
+		<article>
+			<h2>American Express</h2>
+			<h3>Performance Designer</h3>
+			<p class="location">Ft. Lauderdale, FL</p>
+			<p class="date">2012 - 2014</p>
+			<ul>
+				<li>Analyzed tasks/workflows of employees from different business units at American Express, to design and develop the appropriate delivery models</li>
+				<li>Validated usability and ensured the content and design of the online tool was functioning as expected by meeting the needs of the users.</li>
+				<li>Innovated with new designs using HTML, CSS3 and JavaScript for the enhancement of the online tool.</li>
+				<li>Developed standards and procedures for the implementation of new designs</li>
+				<li>Created and maintained articles on a web-based reference system accessed by 50,000+ employees globally; also created and maintained Frequently Asked Questions on americanexpress.com sites for 13 countries</li>	
+				<li>Assisted, mentored and provided guidance to colleagues and contractors.</li>		
+			</ul>
+			<h3>Methods Analyst</h3>
+			<p class="location">Ft. Lauderdale, FL</p>
+			<p class="date">2010 - 2012</p>
+			<ul>
+				<li>Migrated pages from one reference system to a web-based reference system</li>
+				<li>Worked in partnership with Credit Utility Network to update and migrate policies and procedures followed by Outside Collection Agencies, to American Express’ internal online tool (ECCO).</li>
+				<li>Rewrote and updated International Spanish documents to prepare for Migration from one online tool (Infonet) to another (ECCO). Migrated Spanish documents and optimized to follow our standards for information mapping.  </li>	
+			</ul>
+		</article>
+	</section>
+	<section>
+		<h1>Education / Training</h1>
+		<ul>
+			<li>Master, Web Design and Online Communications <span>University of Florida, Gainesville, Florida</span></li>
+			<li>Bachelor of Science, Visual Journalism <span>University of Miami, Coral Gables, Florida</span></li>
+			<li>Associate in Arts, Mass Media Communications and Photography <span>Miami Dade College, Miami, Florida</span></li>
+		</ul>
+	</section>			
 
+</main>
 
 </body>
 </html>
