Added images and started mobile CSS

--- a/index.html
+++ b/index.html
@@ -7,15 +7,21 @@
 <title>Tatiana Cohen - Resume</title>
 <link href="css/normalize.min.css" rel="stylesheet" type="text/css">
 <link href="style.css" rel="stylesheet" type="text/css">
+<link href='http://fonts.googleapis.com/css?family=Clicker+Script' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
 <header>
 	<h1>Tatiana Cohen</h1>
+	<h2>Curriculum Vitae</h2>
 	<p><a href="mailto:taty@tatianacohen.com">taty@tatianacohen.com</a></p>
 	<p>754.204.0527</p>
 </header>
 <main>
+	<aside>
+		<img src="img/taty.jpg">
+	</aside>
 	<section>
 		<h1>Summary</h1>
 		<p>Multimedia specialist with experience in photography, video production, web design/development and print design. Bilingual (English/Spanish), multi-functional, dependable, self-starter. Specialties include:</p>
@@ -63,7 +69,7 @@
 			</ul>
 		</article>
 	</section>
-	<section>
+	<section class="education">
 		<h1>Education / Training</h1>
 		<ul>
 			<li>Master, Web Design and Online Communications <span>University of Florida, Gainesville, Florida</span></li>
@@ -73,6 +79,9 @@
 	</section>			
 
 </main>
+<footer>
+	<p>the end</p>
+</footer>
 
 </body>
 </html>
