Added testimonials and updates for mobile landscape

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 	<p>754.204.0527</p>
 </header>
 <main>
-	<aside>
+	<section class="portrait">
 		<img src="img/taty.jpg">
-	</aside>
-	<section>
+	</section>
+	<section class="summary">
 		<h1>Summary</h1>
 		<p>Multimedia specialist with experience in photography, video production, web design/development and print design. Bilingual (English/Spanish), multi-functional, dependable, self-starter. Specialties include:</p>
 		<ul>
-			<li>Photography and Video</li>
-			<li>HTML5, CSS, Javascript, jQuery</li>
-			<li>Wordpress</li>
-			<li>Graphic Design</li>
-			<li>Adobe Creative Suite</li>
-			<li>SEO</li>
+			<li><a href="http://tatianacohen.com">Photography and Video</a></li>
+			<li><a href="http://tatianacohen.com">HTML5, CSS, Javascript, jQuery</a></li>
+			<li><a href="http://tatianacohen.com">Wordpress</a></li>
+			<li><a href="http://tatianacohen.com">Graphic Design</a></li>
+			<li><a href="http://tatianacohen.com">Adobe Creative Suite</a></li>
+			<li><a href="http://tatianacohen.com">SEO</a></li>
 		</ul>
 	</section>
 	<section>
@@ -69,15 +69,27 @@
 			</ul>
 		</article>
 	</section>
-	<section class="education">
-		<h1>Education / Training</h1>
-		<ul>
-			<li>Master, Web Design and Online Communications <span>University of Florida, Gainesville, Florida</span></li>
-			<li>Bachelor of Science, Visual Journalism <span>University of Miami, Coral Gables, Florida</span></li>
-			<li>Associate in Arts, Mass Media Communications and Photography <span>Miami Dade College, Miami, Florida</span></li>
-		</ul>
-	</section>			
-
+	<aside>
+		<section class="education">
+			<h1>Education / Training</h1>
+			<ul>
+				<li>Master, Web Design and Online Communications <span>University of Florida, Gainesville, Florida</span></li>
+				<li>Bachelor of Science, Visual Journalism <span>University of Miami, Coral Gables, Florida</span></li>
+				<li>Associate in Arts, Mass Media Communications and Photography <span>Miami Dade College, Miami, Florida</span></li>
+			</ul>
+		</section>	
+		<section class="testimonials">
+			<h1>What they say...</h1>
+			<article>
+				<blockquote>Tatiana has the gift of clarity in her communication skills, and the drive to pursue the best solution in any given situation. She is a hard-worker and a skilled co-worker who often used her skills to think outside of the box and bring home new solutions to old problems. </blockquote>
+				<p>- Chris Duncan, Managing Partner, CDA Graphic Design, LLC</p>
+			</article>
+			<article>
+				<blockquote>Tatiana is one of the best in her field. She has a vision and clarity of the shot she wants to take. She is so knowledgeable in lightning, lens and cameras that she makes it look so easy. Highly recommend Tatiana for any moment you want to capture</blockquote>
+				<p>Monica Wetherington-Lugo, Wedding Planner, Infinity Weddings & Events, LLC.</p>
+			</article>
+		</section>		
+	</aside>
 </main>
 <footer>
 	<p>the end</p>
