Completed reponsive styling

--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
 <header>
 	<h1>Tatiana Cohen</h1>
 	<h2>Curriculum Vitae</h2>
-	<p><a href="mailto:taty@tatianacohen.com">taty@tatianacohen.com</a></p>
-	<p>754.204.0527</p>
+	<div class="contact">
+		<p><a href="mailto:taty@tatianacohen.com">taty@tatianacohen.com</a></p>
+		<p>754.204.0527</p>
+	</div>
 </header>
+
+<section class="portrait">
+	<img src="img/taty.jpg">
+</section>
 <main>
-	<section class="portrait">
-		<img src="img/taty.jpg">
-	</section>
 	<section class="summary">
 		<h1>Summary</h1>
 		<p>Multimedia specialist with experience in photography, video production, web design/development and print design. Bilingual (English/Spanish), multi-functional, dependable, self-starter. Specialties include:</p>
@@ -34,7 +37,7 @@
 			<li><a href="http://tatianacohen.com">SEO</a></li>
 		</ul>
 	</section>
-	<section>
+	<section class="experience">
 		<h1>Professional Experience</h1>
 		<article>
 			<h2>Nu Interactivo</h2>
@@ -69,6 +72,7 @@
 			</ul>
 		</article>
 	</section>
+	</main>
 	<aside>
 		<section class="education">
 			<h1>Education / Training</h1>
@@ -81,18 +85,18 @@
 		<section class="testimonials">
 			<h1>What they say...</h1>
 			<article>
-				<blockquote>Tatiana has the gift of clarity in her communication skills, and the drive to pursue the best solution in any given situation. She is a hard-worker and a skilled co-worker who often used her skills to think outside of the box and bring home new solutions to old problems. </blockquote>
-				<p>- Chris Duncan, Managing Partner, CDA Graphic Design, LLC</p>
+				<blockquote>Tatiana has the gift of clarity in her communication skills, and the drive to pursue the best solution in any given situation. She is a hard-worker and a skilled co-worker who often used her skills to think outside of the box and bring home new solutions to old problems.</blockquote>
+				<p class="author">- Chris Duncan, Managing Partner, CDA Graphic Design, LLC</p>
 			</article>
 			<article>
-				<blockquote>Tatiana is one of the best in her field. She has a vision and clarity of the shot she wants to take. She is so knowledgeable in lightning, lens and cameras that she makes it look so easy. Highly recommend Tatiana for any moment you want to capture</blockquote>
-				<p>Monica Wetherington-Lugo, Wedding Planner, Infinity Weddings & Events, LLC.</p>
+				<blockquote>Tatiana is one of the best in her field. She has a vision and clarity of the shot she wants to take. She is so knowledgeable in lightning, lens and cameras that she makes it look so easy. Highly recommend Tatiana for any moment you want to capture </blockquote>
+				<p class="author">- Monica Wetherington-Lugo, Wedding Planner, Infinity Weddings & Events, LLC.</p>
 			</article>
 		</section>		
 	</aside>
-</main>
+
 <footer>
-	<p>the end</p>
+	<h1>the end</h1>
 </footer>
 
 </body>
