--- a/index.html
+++ b/index.html
@@ -9,95 +9,105 @@
 <link href="style.css" rel="stylesheet" type="text/css">
 <link href='http://fonts.googleapis.com/css?family=Clicker+Script' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+<link href="css/chardinjs.css" rel="stylesheet">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="js/jquery-1.9.1.min.js"></script>
+<script src="js/chardinjs.min.js"></script>
+<script src="js/main.js"></script>
+
 </head>
 <body>
-
-<header>
-	<h1>Tatiana Cohen</h1>
-	<h2>Curriculum Vitae</h2>
-	<div class="contact">
-		<p><a href="mailto:taty@tatianacohen.com">taty@tatianacohen.com</a></p>
-		<p>754.204.0527</p>
-	</div>
-</header>
-
-<section class="portrait">
-	<img src="img/taty.jpg">
-</section>
-<main>
-	<section class="summary">
-		<h1>Summary</h1>
-		<p>Multimedia specialist with experience in photography, video production, web design/development and print design. Bilingual (English/Spanish), multi-functional, dependable, self-starter. Specialties include:</p>
-		<ul>
-			<li><a href="http://tatianacohen.com">Photography and Video</a></li>
-			<li><a href="http://tatianacohen.com">HTML5, CSS, Javascript, jQuery</a></li>
-			<li><a href="http://tatianacohen.com">Wordpress</a></li>
-			<li><a href="http://tatianacohen.com">Graphic Design</a></li>
-			<li><a href="http://tatianacohen.com">Adobe Creative Suite</a></li>
-			<li><a href="http://tatianacohen.com">SEO</a></li>
-		</ul>
+	<section id="intro">
+		<a href="#" class="button">Intro</a>
 	</section>
-	<section class="experience">
-		<h1>Professional Experience</h1>
-		<article>
-			<h2>Nu Interactivo</h2>
-			<h3>Multimedia Specialist</h3>
-			<p class="location">Miami, FL</p>
-			<p class="date">2009 - Present</p>
-			<ul>
-				<li>Assist individuals and organizations with multimedia and marketing solutions including photography and video for promotional purposes, brand development, web design, online presence and SEO.</li>
-				<li>Provide translation services – English/Spanish</li>		
-			</ul>
-		</article>
-		<article>
-			<h2>American Express</h2>
-			<h3>Performance Designer</h3>
-			<p class="location">Ft. Lauderdale, FL</p>
-			<p class="date">2012 - 2014</p>
-			<ul>
-				<li>Analyzed tasks/workflows of employees from different business units at American Express, to design and develop the appropriate delivery models</li>
-				<li>Validated usability and ensured the content and design of the online tool was functioning as expected by meeting the needs of the users.</li>
-				<li>Innovated with new designs using HTML, CSS3 and JavaScript for the enhancement of the online tool.</li>
-				<li>Developed standards and procedures for the implementation of new designs</li>
-				<li>Created and maintained articles on a web-based reference system accessed by 50,000+ employees globally; also created and maintained Frequently Asked Questions on americanexpress.com sites for 13 countries</li>	
-				<li>Assisted, mentored and provided guidance to colleagues and contractors.</li>		
-			</ul>
-			<h3>Methods Analyst</h3>
-			<p class="location">Ft. Lauderdale, FL</p>
-			<p class="date">2010 - 2012</p>
-			<ul>
-				<li>Migrated pages from one reference system to a web-based reference system</li>
-				<li>Worked in partnership with Credit Utility Network to update and migrate policies and procedures followed by Outside Collection Agencies, to American Express’ internal online tool (ECCO).</li>
-				<li>Rewrote and updated International Spanish documents to prepare for Migration from one online tool (Infonet) to another (ECCO). Migrated Spanish documents and optimized to follow our standards for information mapping.  </li>	
-			</ul>
-		</article>
+	<div id="container">
+	<header data-intro="Hello and Welcome to my Curriculum Vitae AKA Resume" data-position="top">
+		<h1>Tatiana Cohen</h1>
+		<h2>Curriculum Vitae</h2>
+		<div class="contact">
+			<p><a href="mailto:taty@tatianacohen.com">taty@tatianacohen.com</a></p>
+			<p>754.204.0527</p>
+		</div>
+	</header>
+
+	<section class="portrait">
+		<img src="img/taty.jpg" data-intro="This is me, Looking forward to meeting you too." data-position="bottom">
 	</section>
-	</main>
-	<aside>
-		<section class="education">
-			<h1>Education / Training</h1>
+	<main>
+		<section class="summary">
+			<h1>Summary</h1>
+			<p>Multimedia specialist with experience in photography, video production, web design/development and print design. Bilingual (English/Spanish), multi-functional, dependable, self-starter. Specialties include:</p>
 			<ul>
-				<li>Master, Web Design and Online Communications <span>University of Florida, Gainesville, Florida</span></li>
-				<li>Bachelor of Science, Visual Journalism <span>University of Miami, Coral Gables, Florida</span></li>
-				<li>Associate in Arts, Mass Media Communications and Photography <span>Miami Dade College, Miami, Florida</span></li>
+				<li><a href="http://tatianacohen.com">Photography and Video</a></li>
+				<li><a href="http://tatianacohen.com">HTML5, CSS, Javascript, jQuery</a></li>
+				<li><a href="http://tatianacohen.com">Wordpress</a></li>
+				<li><a href="http://tatianacohen.com">Graphic Design</a></li>
+				<li><a href="http://tatianacohen.com">Adobe Creative Suite</a></li>
+				<li><a href="http://tatianacohen.com">SEO</a></li>
 			</ul>
-		</section>	
-		<section class="testimonials">
-			<h1>What they say...</h1>
+		</section>
+		<section class="experience" data-intro="This is where I worked before" data-position="top">
+			<h1 >Professional Experience</h1>
 			<article>
-				<blockquote>Tatiana has the gift of clarity in her communication skills, and the drive to pursue the best solution in any given situation. She is a hard-worker and a skilled co-worker who often used her skills to think outside of the box and bring home new solutions to old problems.</blockquote>
-				<p class="author">- Chris Duncan, Managing Partner, CDA Graphic Design, LLC</p>
+				<h2>Nu Interactivo</h2>
+				<h3>Multimedia Specialist</h3>
+				<p class="location">Miami, FL</p>
+				<p class="date">2009 - Present</p>
+				<ul>
+					<li>Assist individuals and organizations with multimedia and marketing solutions including photography and video for promotional purposes, brand development, web design, online presence and SEO.</li>
+					<li>Provide translation services – English/Spanish</li>		
+				</ul>
 			</article>
 			<article>
-				<blockquote>Tatiana is one of the best in her field. She has a vision and clarity of the shot she wants to take. She is so knowledgeable in lightning, lens and cameras that she makes it look so easy. Highly recommend Tatiana for any moment you want to capture </blockquote>
-				<p class="author">- Monica Wetherington-Lugo, Wedding Planner, Infinity Weddings & Events, LLC.</p>
+				<h2>American Express</h2>
+				<h3>Performance Designer</h3>
+				<p class="location">Ft. Lauderdale, FL</p>
+				<p class="date">2012 - 2014</p>
+				<ul>
+					<li>Analyzed tasks/workflows of employees from different business units at American Express, to design and develop the appropriate delivery models</li>
+					<li>Validated usability and ensured the content and design of the online tool was functioning as expected by meeting the needs of the users.</li>
+					<li>Innovated with new designs using HTML, CSS3 and JavaScript for the enhancement of the online tool.</li>
+					<li>Developed standards and procedures for the implementation of new designs</li>
+					<li>Created and maintained articles on a web-based reference system accessed by 50,000+ employees globally; also created and maintained Frequently Asked Questions on americanexpress.com sites for 13 countries</li>	
+					<li>Assisted, mentored and provided guidance to colleagues and contractors.</li>		
+				</ul>
+				<h3>Methods Analyst</h3>
+				<p class="location">Ft. Lauderdale, FL</p>
+				<p class="date">2010 - 2012</p>
+				<ul>
+					<li>Migrated pages from one reference system to a web-based reference system</li>
+					<li>Worked in partnership with Credit Utility Network to update and migrate policies and procedures followed by Outside Collection Agencies, to American Express’ internal online tool (ECCO).</li>
+					<li>Rewrote and updated International Spanish documents to prepare for Migration from one online tool (Infonet) to another (ECCO). Migrated Spanish documents and optimized to follow our standards for information mapping.  </li>	
+				</ul>
 			</article>
-		</section>		
-	</aside>
+		</section>
+		</main>
+		<aside>
+			<section class="education">
+				<h1>Education / Training</h1>
+				<ul>
+					<li>Master, Web Design and Online Communications <span>University of Florida, Gainesville, Florida</span></li>
+					<li>Bachelor of Science, Visual Journalism <span>University of Miami, Coral Gables, Florida</span></li>
+					<li>Associate in Arts, Mass Media Communications and Photography <span>Miami Dade College, Miami, Florida</span></li>
+				</ul>
+			</section>	
+			<section class="testimonials" data-intro="Lovely people I have had the pleasure to work with" data-position="bottom">
+				<h1>What they say...</h1>
+				<article>
+					<blockquote>Tatiana has the gift of clarity in her communication skills, and the drive to pursue the best solution in any given situation. She is a hard-worker and a skilled co-worker who often used her skills to think outside of the box and bring home new solutions to old problems.</blockquote>
+					<p class="author">- Chris Duncan, Managing Partner, CDA Graphic Design, LLC</p>
+				</article>
+				<article>
+					<blockquote>Tatiana is one of the best in her field. She has a vision and clarity of the shot she wants to take. She is so knowledgeable in lightning, lens and cameras that she makes it look so easy. Highly recommend Tatiana for any moment you want to capture </blockquote>
+					<p class="author">- Monica Wetherington-Lugo, Wedding Planner, Infinity Weddings & Events, LLC.</p>
+				</article>
+			</section>		
+		</aside>
 
-<footer>
-	<h1>the end</h1>
-</footer>
-
+	<footer>
+		<h1>the end</h1>
+	</footer>
+</div>
 </body>
 </html>
