installed second plugin and last updates

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="js/jquery-1.9.1.min.js"></script>
 <script src="js/chardinjs.min.js"></script>
+<script src="js/jquery.scrollUp.js"></script>
 <script src="js/main.js"></script>
 
 </head>
@@ -108,6 +109,7 @@
 	<footer>
 		<h1>the end</h1>
 	</footer>
+	
 </div>
 </body>
 </html>
